--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mui/codemod": "^5.15.14",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@vscode/vsce": "^3.6.2",
     "ace-builds": "^1.35.5",
     "d3-graphviz": "^5.6.0",
     "d3-scale-chromatic": "^3.1.0",
@@ -52,6 +53,10 @@
     "start": "react-scripts --max_old_space_size=4096 start",
     "start:coverage": "react-scripts --max_old_space_size=4096 -r @cypress/instrument-cra start",
     "build": "react-scripts --max_old_space_size=4096 build",
+    "build:extension": "./build-vscode-extension.sh",
+    "extension:compile": "cd vscode-extension && npm run compile",
+    "extension:watch": "cd vscode-extension && npm run watch",
+    "extension:package": "cd vscode-extension && npm run package",
     "test": "react-scripts test --env=jsdom --verbose=false",
     "test:coverage": "react-scripts test --env=jsdom --coverage --coverageDirectory=./coverage-jest",
     "integration-test": "cypress run --config video=${CI:-false} --browser=chrome --headless --record --key a12725d3-851c-4e67-b432-079b4fb1a875",
