--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -3,7 +3,7 @@
   "displayName": "Graphviz Visual Editor",
   "description": "A VSCode extension for interactive visual editing of Graphviz graphs described in the DOT language",
   "version": "1.3.0",
-  "publisher": "graphviz",
+  "publisher": "barakhoffer",
   "engines": {
     "vscode": "^1.74.0"
   },
